--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
 <head>
-  <meta charset="UTF-8"/>
-  <title>Hello React!</title>
+    <meta charset="UTF-8"/>
+    <title>Hello React!</title>
 </head>
 <body>
-<div id="example"></div>
-
-<!-- Dependencies -->
-<script src="./node_modules/react/umd/react.development.js"></script>
-<script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
-
-<!-- Main -->
-<script src="./dist/bundle.js"></script>
+<div id="app"></div>
 </body>
 </html>
